--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,2 +1,3 @@
 sdk.dir=C:\\Users\\ceguille\\AppData\\Local\\Android\\Sdk
 flutter.sdk=E:\\temp\\flutter_windows_3.3.1-stable\\flutter
+flutter.buildMode=debug
