--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: babylonnative
-description: A new Flutter plugin project.
+description: Brings Babylon.js 3D engine to your Flutter app
 version: 0.0.1
 homepage:
 
@@ -56,6 +56,9 @@ flutter:
   #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
+
+    assets:
+      - assets/images/screenshot001.jpg
 
   # To add custom fonts to your plugin package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
