--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,3 +2,8 @@ include: package:flutter_lints/flutter.yaml
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+
+analyzer:
+  errors:
+    unused_field: ignore
+    unused_local_variable: ignore
