--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,8 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
+    # recursive checkout
+    - name: Checkout
+      uses: actions/checkout@master
+      with:
+        submodules: 'recursive'
+
     # Setup Java environment in order to build the Android app.
-    - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
