--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -27,3 +27,8 @@ linter:
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+
+analyzer:
+  errors:
+    unused_field: ignore
+    unused_local_variable: ignore
