--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,8 +27,6 @@ jobs:
         channel: 'stable' # 'dev', 'alpha', default to: 'stable'
         # flutter-version: '1.12.x' # you can also specify exact version of flutter
     
-    # Example
-    - run: cd example
 
     # Get flutter dependencies.
     - run: flutter pub get
@@ -43,7 +41,9 @@ jobs:
     - run: flutter test
     
     # Build apk.
-    - run: flutter build apk
+    - run: |
+        cd example
+        flutter build apk
     
     # Upload generated apk to the artifacts.
     - uses: actions/upload-artifact@v1
