--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -3,15 +3,34 @@ on:
   pull_request:
     branches:
       - main
-      
+
+env:
+  CMAKE_VERSION: 3.19.6
+
 jobs:
   build:
     # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
     steps:
     
+    - name: CMake install
+      run: |
+        wget https://github.com/Kitware/CMake/releases/download/v${{ env.BRN_Version }}/cmake-${{ env.BRN_Version }}-Linux-x86_64.sh
+        sudo mkdir -p /opt/cmake/cmake-${{ env.BRN_Version }}-linux-x86_64
+        sudo sh cmake-${{ env.BRN_Version }}-Linux-x86_64.sh --prefix=/opt/cmake/cmake-${{ env.BRN_Version }}-linux-x86_64 --skip-license
+        sudo rm /usr/local/bin/cmake
+        sudo ln -s /opt/cmake/cmake-${{ env.BRN_Version }}-linux-x86_64/bin/cmake /usr/local/bin/cmake
+        sudo apt-get update
+        sudo apt-get install ninja-build
+        cmake --version
+    
+    # recursive checkout
+    - name: Checkout
+      uses: actions/checkout@master
+      with:
+        submodules: 'recursive'
+
     # Setup Java environment in order to build the Android app.
-    - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
@@ -22,8 +41,6 @@ jobs:
         channel: 'stable' # 'dev', 'alpha', default to: 'stable'
         # flutter-version: '1.12.x' # you can also specify exact version of flutter
     
-    # Example
-    - run: cd example
 
     # Get flutter dependencies.
     - run: flutter pub get
@@ -38,7 +55,9 @@ jobs:
     - run: flutter test
     
     # Build apk.
-    - run: flutter build apk
+    - run: |
+        cd example
+        flutter build apk
     
     # Upload generated apk to the artifacts.
     - uses: actions/upload-artifact@v1
