--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,11 +15,11 @@ jobs:
     
     - name: CMake install
       run: |
-        wget https://github.com/Kitware/CMake/releases/download/v${{ env.BRN_Version }}/cmake-${{ env.BRN_Version }}-Linux-x86_64.sh
-        sudo mkdir -p /opt/cmake/cmake-${{ env.BRN_Version }}-linux-x86_64
-        sudo sh cmake-${{ env.BRN_Version }}-Linux-x86_64.sh --prefix=/opt/cmake/cmake-${{ env.BRN_Version }}-linux-x86_64 --skip-license
+        wget https://github.com/Kitware/CMake/releases/download/v${{ env.CMAKE_VERSION }}/cmake-${{ env.CMAKE_VERSION }}-Linux-x86_64.sh
+        sudo mkdir -p /opt/cmake/cmake-${{ env.CMAKE_VERSION }}-linux-x86_64
+        sudo sh cmake-${{ env.CMAKE_VERSION }}-Linux-x86_64.sh --prefix=/opt/cmake/cmake-${{ env.CMAKE_VERSION }}-linux-x86_64 --skip-license
         sudo rm /usr/local/bin/cmake
-        sudo ln -s /opt/cmake/cmake-${{ env.BRN_Version }}-linux-x86_64/bin/cmake /usr/local/bin/cmake
+        sudo ln -s /opt/cmake/cmake-${{ env.CMAKE_VERSION }}-linux-x86_64/bin/cmake /usr/local/bin/cmake
         sudo apt-get update
         sudo apt-get install ninja-build
         cmake --version
