disable XR, extract JS .so, npm workflow

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -30,6 +30,15 @@ jobs:
       with:
         submodules: 'recursive'
 
+    - name: Use Node.js 14.x
+      uses: actions/setup-node@v3
+      with:
+        node-version: 14.x
+        
+    - run: |
+        cd BabylonNative/Apps
+        npm ci
+
     # Setup Java environment in order to build the Android app.
     - uses: actions/setup-java@v1
       with:
