--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,9 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-    - name: Install Ninja
-      run: sudo apt-get install -y ninja-build
-    
     - name: CMake install
       run: |
         wget https://github.com/Kitware/CMake/releases/download/v${{ env.CMAKE_VERSION }}/cmake-${{ env.CMAKE_VERSION }}-Linux-x86_64.sh
@@ -25,6 +22,7 @@ jobs:
         sudo ln -s /opt/cmake/cmake-${{ env.CMAKE_VERSION }}-linux-x86_64/bin/cmake /usr/local/bin/cmake
         sudo apt-get update
         sudo apt-get install ninja-build
+        ln -s /usr/bin/ninja-build /opt/cmake/cmake-${{ env.CMAKE_VERSION }}-linux-x86_64/bin/ninja
         cmake --version
     
     # recursive checkout
