--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,7 +22,7 @@ jobs:
         sudo ln -s /opt/cmake/cmake-${{ env.CMAKE_VERSION }}-linux-x86_64/bin/cmake /usr/local/bin/cmake
         sudo apt-get update
         sudo apt-get install ninja-build
-        ln -s /usr/bin/ninja-build /opt/cmake/cmake-${{ env.CMAKE_VERSION }}-linux-x86_64/bin/ninja
+        sudo ln -s /usr/bin/ninja-build /opt/cmake/cmake-${{ env.CMAKE_VERSION }}-linux-x86_64/bin/ninja
         cmake --version
     
     # recursive checkout
